object/output.txt
object$ g++ array03_dynamic_complexcls02.cpp 
array03_dynamic_complexcls02.cpp: In member function ‘myArray& myArray::operator=(const myArray&)’:
array03_dynamic_complexcls02.cpp:71:12: error: binding reference of type ‘myArray&’ to ‘const myArray’ discards qualifiers
   71 |     return k;// ?
      |            ^
object$ 
